Bug 442619 - Cursor-following assistant lines of 2PP and VP have strange interactions when vanishing points are outside limited area
Summary: Cursor-following assistant lines of 2PP and VP have strange interactions when...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Assistants (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-17 21:27 UTC by tomtomtomreportingin
Modified: 2021-09-24 13:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-09-17 21:27:30 UTC
(occurs in git 09aee17, but NOT in Krita 5 beta 1)

SUMMARY
The assistant lines of 2PP and VP that follow the cursor exhibit strange behavior when at least one vanishing point is outside the limited area, mostly bleeding out during unnecessary times. Issue happens regardless of Canvas Graphics Acceleration being enabled.

STEPS TO REPRODUCE (with 2PP)
1. Create a limited area 2PP assistant with two vanishing points outside the limited area.
2. Select freehand brush tool and move cursor around (outside) the box.

OBSERVED RESULT (with 2PP)
In beta 1 no lines from the vanishing points would appear when the cursor is outside the box. In git 09aee17 they will always show and one of the lines will jut out of the canvas.

STEPS TO REPRODUCE (with Vanishing Point)
1. Create a limited area VP assistant with the vanishing point outside the limited area.
2. Select freehand brush tool and move cursor around (outside) the box.

OBSERVED RESULT (with Vanishing Point)
The cursor-following line will always show UNLESS the line crosses into the limited area asisstant box.

EXPECTED RESULT
These lines sourced from the vanishing points should probably only show when the cursor is within the limited area.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.85.0
Qt Version: 5.12.11 (Appimage)
Comment 1 Tiar 2021-09-22 12:08:12 UTC
Git commit fc9cef6d430af1198e820cb751b792bd8d685c3e by Agata Cacko.
Committed on 22/09/2021 at 11:57.
Pushed by tymond into branch 'master'.

Fix preview of local assistants

This commit fixes artifacts when the vanishing point is outside
of the limited area.

M  +2    -2    plugins/assistants/Assistants/TwoPointAssistant.cc
M  +1    -1    plugins/assistants/Assistants/VanishingPointAssistant.cc

https://invent.kde.org/graphics/krita/commit/fc9cef6d430af1198e820cb751b792bd8d685c3e
Comment 2 Tiar 2021-09-24 13:48:53 UTC
Git commit a1f7131e3b16f8998df74eeeefd65da93602b0ef by Agata Cacko.
Committed on 24/09/2021 at 13:45.
Pushed by tymond into branch 'krita/5.0'.

Fix preview of local assistants

This commit fixes artifacts when the vanishing point is outside
of the limited area.

M  +2    -2    plugins/assistants/Assistants/TwoPointAssistant.cc
M  +1    -1    plugins/assistants/Assistants/VanishingPointAssistant.cc

https://invent.kde.org/graphics/krita/commit/a1f7131e3b16f8998df74eeeefd65da93602b0ef