Fix preview of local assistants

This commit fixes artifacts when the vanishing point is outside
of the limited area.

BUG:442619